--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div>
 
             <h1  data-testid="slackUserName">Bright</h1>
-            <img src="https://media.licdn.com/dms/image/C5603AQGOIQlIy_Vk3A/profile-displayphoto-shrink_200_200/0/1654086100436?e=1697068800&v=beta&t=hatFcdCbdF4i4EpwuytnCR72vId1B1wbwzCrKAhv9cQ" alt="Avatar" data-testid="slackDisplayImage">
+            <img src="https://ca.slack-edge.com/T05FFAA91JP-U05RAD6B50D-d25e2b7e3ada-512" alt="Avatar" data-testid="slackDisplayImage">
         </div>
             
           <div data-testid="currentDayOfTheWeek" class="daysOfWeek">
