--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <div>
 
-            <h1  data-testid="slackUserName">Bright</h1>
+            <h1  data-testid="slackUserName">Brytchukz</h1>
             <img src="https://ca.slack-edge.com/T05FFAA91JP-U05RAD6B50D-d25e2b7e3ada-512" alt="Avatar" data-testid="slackDisplayImage">
         </div>
             
